--- a/rapport.tex
+++ b/rapport.tex
@@ -2,12 +2,10 @@
 
 \usepackage[utf8]{inputenc}
 \usepackage[francais]{babel}
-\usepackage{setspace}
 
 \begin{document}
-\onehalfspacing
 \title{Rapport}
-\author{Pablo \bsc{Bourdelas}}
+\author{Guillaume \bsc{Ryckart} - Pablo \bsc{Bourdelas}}
 \maketitle
 
 \section{Introduction}
