Création de la page de titre et ajout du plan

--- a/rapport.tex
+++ b/rapport.tex
@@ -2,12 +2,29 @@
 
 \usepackage[utf8]{inputenc}
 \usepackage[francais]{babel}
-
+\renewcommand{\thesection}{\arabic{section}}
 \begin{document}
-\title{Rapport}
+\title{%
+    \begin{minipage}\linewidth
+        \centering
+        Rapport de Projet d'Algorithmique
+        \vskip 3pt
+        \large Création d'un Clone d'Hexxagon
+    \end{minipage}
+}
 \author{Guillaume \bsc{Ryckart} - Pablo \bsc{Bourdelas}}
 \maketitle
 
 \section{Introduction}
+	
+\section{Algorithmes}
+	\subsection{Gestion de plateau}
+	
+	\subsection{Déplacement et coups}
+
+\section{Graphiques}
+	\subsection{Méthode choisie}
+	\subsection{Style graphique} %Vraiment Utile ?
+
 \end{document}
 
