--- a/rapport.tex
+++ b/rapport.tex
@@ -24,7 +24,7 @@ A chaque tour, un joueur peut soit: copier un de ses pions sur une case vide adj
 De plus, le programme devra également: \begin{itemize}
 \item Avoir une interface graphique
 \item Gérer des plateaux de différentes tailles
-\item Proposer un mode deux joeurs et un mode contre l'odinateur
+\item Proposer un mode deux joueurs et un mode contre l'odinateur
 \item Permettre de bloquer des cases sur le plateau 
 \item Mémoriser les scores les plus élevés
 \end {itemize}
