--- a/rapport.tex
+++ b/rapport.tex
@@ -75,7 +75,7 @@ Cette méthode a l'avantage d'être moins couteuse en temps que de vérifier cas
 \section{Graphismes}
 	\subsection{Méthode choisie}
 	
-		Nous avons choisi de modéliser tout le jeu en utilisant la bibliothèque graphique SDL 1.2, qui nous permet de gérer le son, les graphismes, ainsi que la souris. On définit plusieurs découpes du fichier contenant les sprites via la strucutre SDL\_Rect (cette structure permet de définir un rectangle simple). On peut donc afficher seulment certaines parties du fichier png, et stocker toutes les images sur un seul fichier.\\
+		Nous avons choisi de modéliser tout le jeu en utilisant la bibliothèque graphique SDL 1.2, qui nous permet de gérer le son, les graphismes, ainsi que la souris. On définit plusieurs découpes du fichier contenant les sprites via la strucutre SDL\_Rect (cette structure permet de définir un rectangle simple). On peut donc afficher seulement certaines parties du fichier png, et stocker toutes les images sur un seul fichier.\\
 		
 		Ces découpes sont parfois stockées sous formes de tableaux, comme par exemple:\begin{itemize}
 		\item HexaT, qui contient l'Hexagone de base, ainsi que son contour vert ou rouge,
