Conclusion suce-boule

--- a/rapport.tex
+++ b/rapport.tex
@@ -87,5 +87,10 @@ Cette méthode a l'avantage d'être moins couteuse en temps que de vérifier cas
 	
 		Nous avons choisi de faire notre hexxagon dans le style synthwave (Tron Leagacy, Kung Fury, Far Cry : Blood Dragon): Couleurs néon sur du noir, et personnages cyberpunk.
 
+\newpage
+\section{Conclusion}
+
+	Ce projet nous as permis d'aborder la programmation sur un nouvel angle: Nous avons pu profiter des conaissances aquises au 1er Semstre en algorithmie pour offrir un programme plus optimisé que ceux que nous faisions auparavent, et nous avons également pu découvrir une utilisation plus avancée de la SDL. Nous avons égalment pu apporter notre touche personelle au projet, en choisissant cet aspect graphique et ce style de rendu.
+
 \end{document}
 
